feat: add language selector

--- a/config/general.ini
+++ b/config/general.ini
@@ -1,14 +1,14 @@
 [languages]
 language/size=3
 language/1/name=Javascript
-language/1/nameIcon=Javascript
-language/1/completeFile=Javascript
-language/1/highlightFile=Javascript
+language/1/nameIcon=javascript
+language/1/completeFile=javascript.json
+language/1/highlightFile=javascript.json
 language/2/name=C++
-language/2/nameIcon=C++
-language/2/completeFile=C++
-language/2/highlightFile=C++
-language/2/name=SQL
-language/2/nameIcon=SQL
-language/2/completeFile=SQL
-language/2/highlightFile=SQL
+language/2/nameIcon=c++
+language/2/completeFile=c++.json
+language/2/highlightFile=c++.json
+language/3/name=SQL
+language/3/nameIcon=sql
+language/3/completeFile=sql.json
+language/3/highlightFile=sql.json
