feat: Implement FilesTree with custom icons by extension using regex, and read an write files by open folder

--- a/config/general.ini
+++ b/config/general.ini
@@ -12,3 +12,27 @@ language/3/name=SQL
 language/3/nameIcon=sql
 language/3/completeFile=sql.json
 language/3/highlightFile=sql.json
+
+[iconsExtensions]
+extension/size=7
+extension/1/name=Javascript
+extension/1/regex=^.*\.js$
+extension/1/nameIcon=javascript
+extension/2/name=Json
+extension/2/regex=^.*\.json$
+extension/2/nameIcon=json
+extension/3/name=Jsx
+extension/3/regex=^.*\.jsx$
+extension/3/nameIcon=jsx
+extension/4/name=Markdown
+extension/4/regex=^.*\.md$
+extension/4/nameIcon=markdown
+extension/5/name=Git
+extension/5/regex=^.*\.gitignore$
+extension/5/nameIcon=git
+extension/6/name=C++
+extension/6/regex=^.*\.cpp$
+extension/6/nameIcon=c++
+extension/7/name=Sql
+extension/7/regex=^.*\.sql$
+extension/7/nameIcon=sql
